Fix docker build command.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Print Version
         run: echo "${GITHUB_SHA}"
       - run: docker login --username rossmaclean --password ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: docker build -f build/Dockerfile -t rossmaclean/fahclient-arm64:${GITHUB_SHA} .
+      - run: docker build -t rossmaclean/fahclient-arm64:${GITHUB_SHA} .
       - run: docker push rossmaclean/fahclient-arm64:${GITHUB_SHA}
