--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,9 +11,12 @@ jobs:
   build_push_image:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - uses: actions/checkout@v2
       - name: Print Version
         run: echo "${GITHUB_SHA}"
       - run: docker login --username rossmaclean --password ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: docker build -t rossmaclean/fahclient-arm64:${GITHUB_SHA} .
+      - run: docker buildx build --platform linux/arm64 -t rossmaclean/fahclient-arm64:${GITHUB_SHA} .
       - run: docker push rossmaclean/fahclient-arm64:${GITHUB_SHA}
