--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,8 +11,9 @@ jobs:
   build_push_image:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
       - uses: actions/checkout@v2
       - name: Print Version
