--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - uses: actions/checkout@v2
       - name: Print Version
-        run: echo "${GITHUB_SHA}"
+        run: echo "${GITHUB_SHA::8}"
       - run: docker login --username rossmaclean --password ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: docker buildx build --platform linux/arm64 -t rossmaclean/fahclient-arm64:${GITHUB_SHA} .
-      - run: docker push rossmaclean/fahclient-arm64:${GITHUB_SHA}
+      - run: docker buildx build --push --platform linux/arm64 -t rossmaclean/fahclient-arm64:${GITHUB_SHA::8} .
+      - run: docker push rossmaclean/fahclient-arm64:${GITHUB_SHA::8}
